--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 # dependencies
 node_modules
-.pnp
+/.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
-coverage
+/coverage
 
 # next.js
-.next/
-out/
-build
+/.next/
+/out/
+
+# production
+/build
 
 # misc
 .DS_Store
@@ -23,6 +26,9 @@ yarn-error.log*
 # local env files
 .env*.local
 
-# IDE
-.vscode
-.idea
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
